--- a/Pipfile
+++ b/Pipfile
@@ -2,7 +2,6 @@
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
-
 [dev-packages]
 pytest-django = "*"
 pytest-cov = "*"
@@ -14,12 +13,11 @@ pytest-faker = "*"
 pytest-lazy-fixture = "*"
 flake8 = "*"
 pytest-xdist = "*"
-
 [packages]
 django = "==4.0"
 django-rest-swagger = "==2.2.0"
 python-decouple = "==3.4"
-psycopg2 = "==2.8.6"
+#psycopg2 = "==2.8.6"
 django-filter = "==2.4.0"
 django-storages = "==1.11.1"
 rules = "==2.2"
@@ -39,6 +37,5 @@ click = "8.1.3"
 django-colorfield="==0.7.1"
 Pillow="==9.2.0"
 cryptography = "==3.4.7"
-
 [requires]
 python_version = "3.10"
