Jwt Authentication integration with api

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_PASSWORD="1234"
 DB_HOST="localhost"
 TENANT_SCHEMA_NAME="insights"
 DB_CONN_MAX_AGE=60
+JWT_SECRET_KEY="a quick brown fox jumped over a lazy dog."
