--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 SECRET_KEY="m=$@xws^d79(ca4$-pwv+c$w))at4b13kp*3e&qu!*=v1c1xva"
 DB_ENGINE="django.db.backends.postgresql_psycopg2"
-DB_NAME="sita"
+DB_NAME="SITA"
 DB_USER="postgres"
-DB_PASSWORD="1234"
+DB_PASSWORD="postgres"
 DB_HOST="localhost"
 TENANT_SCHEMA_NAME="insights"
 DB_CONN_MAX_AGE=60
