--- a/Pipfile
+++ b/Pipfile
@@ -39,7 +39,7 @@ click = "8.1.3"
 django-colorfield="==0.7.1"
 Pillow="==9.2.0"
 cryptography = "==3.4.7"
-psycopg2 = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.10"
